force-app/main/default/objects/Supplier__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;s-Hertogenbosch</fullName>
            </value>
            <value>
                <fullName>Alkmaar</fullName>
            </value>
            <value>
                <fullName>Almelo</fullName>
            </value>
            <value>
                <fullName>Almere Stad</fullName>
            </value>
            <value>
                <fullName>Alphen aan den Rijn</fullName>
            </value>
            <value>
                <fullName>Amersfoort</fullName>
            </value>
            <value>
                <fullName>Amstelveen</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Amsterdam-Zuidoost</fullName>
            </value>
            <value>
                <fullName>Apeldoorn</fullName>
            </value>
            <value>
                <fullName>Arnhem</fullName>
            </value>
            <value>
                <fullName>Breda</fullName>
            </value>
            <value>
                <fullName>Delft</fullName>
            </value>
            <value>
                <fullName>Deventer</fullName>
            </value>
            <value>
                <fullName>Dordrecht</fullName>
            </value>
            <value>
                <fullName>Eindhoven</fullName>
            </value>
            <value>
                <fullName>Enschede</fullName>
            </value>
            <value>
                <fullName>Gouda</fullName>
            </value>
            <value>
                <fullName>Groningen</fullName>
            </value>
            <value>
                <fullName>Haarlem</fullName>
            </value>
            <value>
                <fullName>Heerlen</fullName>
            </value>
            <value>
                <fullName>Helmond</fullName>
            </value>
            <value>
                <fullName>Hengelo</fullName>
            </value>
            <value>
                <fullName>Hilversum</fullName>
            </value>
            <value>
                <fullName>Hoofddorp</fullName>
            </value>
            <value>
                <fullName>Hoorn</fullName>
            </value>
            <value>
                <fullName>Leeuwarden</fullName>
            </value>
            <value>
                <fullName>Leiden</fullName>
            </value>
            <value>
                <fullName>Lelystad</fullName>
            </value>
            <value>
                <fullName>Maastricht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>